--- a/index.html
+++ b/index.html
@@ -34,8 +34,22 @@
         <h4>Series</h4>
         <figure>
             <img src="images/pacman_timeline.png" alt="Pac-Man TimeLine">
-            <figcaption></figcaption>
+            <figcaption>Pac-Man throughout the years</figcaption>
         </figure>
+<ul>
+    <li><strong>Pac-Man</strong> 1980</li>
+    <li><strong>Ms. Pac-Man</strong> 1981</li>	
+    <li><strong>Super Pac-Man</strong>	1982</li>
+    <li><strong>Pac-Man Plus</strong>	1982</li>
+    <li><strong>Baby Pac-Man</strong>	1982</li>
+    <li><strong>Professor Pac-Man</strong>	1983</li>
+    <li><strong>Pac & Pal</strong>	1983</li>
+    <li><strong>Jr. Pac-Man</strong>	1983</li>
+    <li><strong>Pac-Land</strong>	1984</li>
+    <li><strong>Pac-Mania</strong>	1987</li>
+    <li><strong>Pac-Man VR</strong>	1996</li>
+    <li><strong>Pac-Man Battle Royale</strong>	2011</li>
+</ul>
         
     </article>
     
